--- a/panel/claim.yml
+++ b/panel/claim.yml
@@ -1,6 +1,15 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
+  name: sql-proxy-volume
+spec:
+  accessModes:
+    - ReadWriteOnce
+
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
   name: pterodactyl-app-claim
 spec:
   accessModes:
