--- a/panel/claim.yml
+++ b/panel/claim.yml
@@ -5,6 +5,9 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  resources:
+    requests:
+      storage: 50Mi
 
 ---
 kind: PersistentVolumeClaim
