--- a/panel/deployment-panel.yaml
+++ b/panel/deployment-panel.yaml
@@ -51,10 +51,11 @@ spec:
         - name: REDIS_HOST
           value: "redis-server-master-0.redis-server-headless.redis.svc.cluster.local" # redis server ip or dns
         - name: REDIS_PASSWORD
-          valueFrom: 
-            secretKeyRef: 
-              key: REDIS_PASSWORD
-              name: pterodactyl-panel
+          value: "TtizwZAyZM"
+          # valueFrom: 
+          #   secretKeyRef: 
+          #     key: REDIS_PASSWORD
+          #     name: pterodactyl-panel
         - name: DB_HOST
           value: "127.0.0.1" # database server ip or dns
         - name: DB_PORT
